--- a/tech-news-frontend/public/knowledge_base.json
+++ b/tech-news-frontend/public/knowledge_base.json
@@ -42598,5 +42598,181 @@
         "published": "Tue, 06 Jan 2026 15:59:17 +0000",
         "source": "Inc42 Media",
         "summary": "<img alt=\"TVS To Sell Rapido Stake Worth INR 288 Cr To Prosus &amp; Accel\" class=\"webfeedsFeaturedVisual wp-post-image\" height=\"1020\" src=\"https://inc42.com/cdn-cgi/image/quality=75/https://asset.inc42.com/2025/11/rapido-TVS-featured.png\" style=\"display: block; margin: auto; margin-bottom: 5px;\" width=\"1360\" />The Competition Commission of India (CCI) has approved Prosus\u2019 entity MIH Investments One BV stake acquisition in ride-hailing unicorn Rapido,&#8230;"
+    },
+    {
+        "id": "https://techcrunch.com/2026/01/06/commonwealth-fusion-systems-installs-reactor-magnet-lands-deal-with-nvidia/",
+        "title": "Commonwealth Fusion Systems installs reactor magnet, lands deal with Nvidia",
+        "link": "https://techcrunch.com/2026/01/06/commonwealth-fusion-systems-installs-reactor-magnet-lands-deal-with-nvidia/",
+        "published": "Tue, 06 Jan 2026 16:30:00 +0000",
+        "source": "TechCrunch",
+        "summary": "The fusion power frontrunner said that construction on its Sparc reactor was proceeding as planned. Meanwhile, it's building a digital twin to help dial it in."
+    },
+    {
+        "id": "https://www.theverge.com/news/851696/roborock-launches-its-first-robot-lawnmower-in-the-us",
+        "title": "Roborock launches its first robot lawn mower in the US",
+        "link": "https://www.theverge.com/news/851696/roborock-launches-its-first-robot-lawnmower-in-the-us",
+        "published": "2026-01-06T12:01:00-05:00",
+        "source": "The Verge",
+        "summary": "Roborock is finally bringing its bots to yards in the US, several months after expanding into robot lawn mowers last year. The Roborock RockMow X1 LiDAR, announced today at CES, will be launching later this year, featuring autonomous navigation, all-wheel drive, and 360-degree 3D scanning using a combination of LiDAR and Visual Simultaneous Localization and [&#8230;]"
+    },
+    {
+        "id": "https://www.theverge.com/news/852702/roborock-saros-20-sonic-ces-2026",
+        "title": "Roborock\u2019s new Saros 20 robot vacuum cleaners got a climbing upgrade",
+        "link": "https://www.theverge.com/news/852702/roborock-saros-20-sonic-ces-2026",
+        "published": "2026-01-06T12:01:00-05:00",
+        "source": "The Verge",
+        "summary": "Roborock's latest robovacs don't need help getting out of tricky situations. At least, that's one of the perks of the improved AdaptiLift Chassis 3.0 on the Roborock Saros 20 and Saros 20 Sonic announced today at CES 2026. The upgraded chassis in Roborock's new flagship robot vacuum cleaners allows the bots to climb over thresholds [&#8230;]"
+    },
+    {
+        "id": "https://www.theverge.com/tech/852121/roborock-saros-rover-stair-climbing-robot-vacuum-ces-2026",
+        "title": "Roborock\u2019s Rover walks, jumps, and vacuums your stairs",
+        "link": "https://www.theverge.com/tech/852121/roborock-saros-rover-stair-climbing-robot-vacuum-ces-2026",
+        "published": "2026-01-06T12:00:00-05:00",
+        "source": "The Verge",
+        "summary": "I've been reviewing robot vacuums for almost a decade, and one question I hear repeatedly is \"When will it clean my stairs?\" Well, we finally have an answer. Sort of. At CES 2026 this week, Roborock launched the Saros Rover, a robot vacuum with articulating legs on wheels that let it climb a full staircase [&#8230;]"
+    },
+    {
+        "id": "https://www.theverge.com/tech/853378/satechi-thunderbolt-5-dock-mac-mini-ces-2026",
+        "title": "You might mistake Satechi&#8217;s new Thunderbolt 5 hub for Apple&#8217;s Mac Mini",
+        "link": "https://www.theverge.com/tech/853378/satechi-thunderbolt-5-dock-mac-mini-ces-2026",
+        "published": "2026-01-06T12:00:00-05:00",
+        "source": "The Verge",
+        "summary": "Satechi is launching a new dock that supports Intel's Thunderbolt 5 technology - and it looks a lot like an Apple Mac Mini. The Thunderbolt 5 CubeDock fits an NVMe SSD enclosure and several ports inside a relatively compact form factor, measuring 5 inches wide and 2 inches tall. And at $399.99, the device is [&#8230;]"
+    },
+    {
+        "id": "https://www.theverge.com/tech/853413/abbott-lingo-withings-cgm-wearable-health-ces-2026",
+        "title": "You can now use Abbott\u2019s OTC glucose monitors with Withings",
+        "link": "https://www.theverge.com/tech/853413/abbott-lingo-withings-cgm-wearable-health-ces-2026",
+        "published": "2026-01-06T12:00:00-05:00",
+        "source": "The Verge",
+        "summary": "Withings isn't done with CES 2026 announcements just yet. The French health tech company just announced a new partnership with Abbott. In the first quarter of the year, Abbott Lingo users will be able to view their glucose data within the Withings app. Lingo is Abbott's over-the-counter continuous glucose monitor (CGM) for nondiabetic people. Withings [&#8230;]"
+    },
+    {
+        "id": "https://arstechnica.com/tech-policy/2026/01/orsted-seeks-injunction-against-us-government-over-project-freeze/",
+        "title": "\u00d8rsted seeks injunction against US government over project freeze",
+        "link": "https://arstechnica.com/tech-policy/2026/01/orsted-seeks-injunction-against-us-government-over-project-freeze/",
+        "published": "Tue, 06 Jan 2026 15:55:41 +0000",
+        "source": "Ars Technica - All content",
+        "summary": "Trump administration had suspended Danish group\u2019s work on major wind farm off coast of Rhode Island."
+    },
+    {
+        "id": "https://www.engadget.com/wearables/pebbles-founder-might-be-just-the-right-person-to-make-an-ai-ring-170104222.html?src=rss",
+        "title": "Pebble's founder might be just the right person to make an AI ring",
+        "link": "https://www.engadget.com/wearables/pebbles-founder-might-be-just-the-right-person-to-make-an-ai-ring-170104222.html?src=rss",
+        "published": "Tue, 06 Jan 2026 17:01:04 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p>Eric Migicovsky has been thinking a lot about friction. Specifically, he\u2019s been thinking about how too much friction in the way of using a device can put people off wearing it altogether. The founder of Pebble is here <a class=\"link\" href=\"https://www.engadget.com/ces-2026-live-updates-on-lego-samsung-nvidia-dell-and-more-153146039.html\" target=\"_blank\">at CES 2026</a> with a few new devices from the company he recently started to bring back the beloved smartwatch brand, including the Pebble "
+    },
+    {
+        "id": "https://www.engadget.com/home/inkposter-launches-a-premium-41-inch-e-paper-display-for-your-home-170000292.html?src=rss",
+        "title": "InkPoster launches a premium, 41-inch e-paper display for your home",
+        "link": "https://www.engadget.com/home/inkposter-launches-a-premium-41-inch-e-paper-display-for-your-home-170000292.html?src=rss",
+        "published": "Tue, 06 Jan 2026 17:00:00 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p>Last year, PocketBook <a class=\"link\" href=\"https://www.engadget.com/home/smart-home/inkposter-uses-an-e-paper-display-to-bring-art-to-your-home-170016899.html\" target=\"_blank\">rocked up at CES with a series of large e-paper displays to display art on the walls of your home</a>. This year, the company has turned up with a far larger, A1-sized model called the Duna, which it says mimics the \u201ctexture, depth and tonal richness of printed paper.\u201d It\u2019s intended to act as an upmarket alternative to"
+    },
+    {
+        "id": "https://www.engadget.com/lovense-launches-an-ai-companion-doll-at-ces-170000490.html?src=rss",
+        "title": "Lovense launches an AI 'companion doll' at CES",
+        "link": "https://www.engadget.com/lovense-launches-an-ai-companion-doll-at-ces-170000490.html?src=rss",
+        "published": "Tue, 06 Jan 2026 17:00:00 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p><strong><em>The following article discusses themes of an adult nature.</em></strong></p><p>Lovense has turned up to CES with a \u201ccompanion doll,\u201d a life-size sex doll that\u2019s designed to be more than just a life size <a class=\"link\" href=\"https://www.engadget.com/2017-04-11-realdolls-first-sex-robot-took-me-to-the-uncanny-valley.html\" target=\"_blank\">sex doll</a>. The company has equipped it with its proprietary AI engine and promises \u201chuman-like cognition, emotional awareness and expressive be"
+    },
+    {
+        "id": "https://www.engadget.com/wearables/pebble-seeks-to-remedy-the-wearable-industrys-original-sin-170000834.html?src=rss",
+        "title": "Pebble seeks to remedy the wearable industry's original sin",
+        "link": "https://www.engadget.com/wearables/pebble-seeks-to-remedy-the-wearable-industrys-original-sin-170000834.html?src=rss",
+        "published": "Tue, 06 Jan 2026 17:00:00 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p>As soon as I held the <a class=\"link\" href=\"https://www.engadget.com/wearables/pebble-brings-its-round-faced-smartwatch-back-from-the-dead-150000172.html\" target=\"_blank\">Pebble Round 2</a> in my hand, I suddenly realized what I\u2019d been missing for the better part of a decade. I\u2019ve always felt smartwatches should supplement, rather than supplant, your phone, but that\u2019s an attitude that feels almost quaint these days. After all, Apple and Samsung believe everyone wants a watch that can do almos"
+    },
+    {
+        "id": "https://www.engadget.com/computing/accessories/satechi-is-embracing-thunderbolt-5-at-ces-with-a-new-dock-and-cable-170000137.html?src=rss",
+        "title": "Satechi is embracing Thunderbolt 5 at CES with a new dock and cable",
+        "link": "https://www.engadget.com/computing/accessories/satechi-is-embracing-thunderbolt-5-at-ces-with-a-new-dock-and-cable-170000137.html?src=rss",
+        "published": "Tue, 06 Jan 2026 17:00:00 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p>Multiple of Satechi's Thunderbolt 4 docks are on <a class=\"link\" href=\"https://www.engadget.com/computing/accessories/best-docking-station-160041863.html\" target=\"_blank\">Engadget's list of the best docking stations</a>, so when the company announces a new accessory, it's usually worth a look. At CES 2026, Satechi is finally making the jump to <a class=\"link\" href=\"https://www.engadget.com/intel-thunderbolt-5-launch-130006804.html\" target=\"_blank\">Thunderbolt 5</a> with a new docking station "
+    },
+    {
+        "id": "https://saigoneer.com/vietnam-news/28652-vienam-bans-unskippable-ads,-requires-skip-button-to-appear-after-5-seconds",
+        "title": "Vienam Bans Unskippable Ads, Requires Skip Button to Appear After 5 Seconds",
+        "link": "https://saigoneer.com/vietnam-news/28652-vienam-bans-unskippable-ads,-requires-skip-button-to-appear-after-5-seconds",
+        "published": "Tue, 06 Jan 2026 16:45:42 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46514677\">Comments</a>"
+    },
+    {
+        "id": "https://jellyfin.org/posts/state-of-the-fin-2026-01-06/",
+        "title": "State of the Fin 2026-01-06 \u2013 Jellyfin",
+        "link": "https://jellyfin.org/posts/state-of-the-fin-2026-01-06/",
+        "published": "Tue, 06 Jan 2026 16:17:24 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46514282\">Comments</a>"
+    },
+    {
+        "id": "https://akr.am/blog/posts/why-is-the-gmail-app-700-mb",
+        "title": "Why is the Gmail app 700 MB?",
+        "link": "https://akr.am/blog/posts/why-is-the-gmail-app-700-mb",
+        "published": "Tue, 06 Jan 2026 16:46:13 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46514692\">Comments</a>"
+    },
+    {
+        "id": "https://www.zdnet.com/article/browser-picker-app-macos-easy-switching-multiple-default-web-browsers/",
+        "title": "Do you work with multiple browsers? You'll love this free MacOS app - see why",
+        "link": "https://www.zdnet.com/article/browser-picker-app-macos-easy-switching-multiple-default-web-browsers/",
+        "published": "Tue, 06 Jan 2026 17:05:47 GMT",
+        "source": "Latest news",
+        "summary": "Browser Picker makes switching between multiple default web browsers so easy, you have to try it to believe it."
+    },
+    {
+        "id": "https://www.zdnet.com/article/rolling-square-android-tracker-tags/",
+        "title": "I've tried countless tracker tags, and these are the best I've found for Android",
+        "link": "https://www.zdnet.com/article/rolling-square-android-tracker-tags/",
+        "published": "Tue, 06 Jan 2026 17:02:32 GMT",
+        "source": "Latest news",
+        "summary": "The Rolling Square AirNotch Pro Dual finder tags are water- and dust-resistant, last up to 20 months, and attach to your stuff - no accessory needed."
+    },
+    {
+        "id": "https://www.zdnet.com/article/roborock-rover-robot-vacuum-ces-2026/",
+        "title": "I saw a two-legged Roborock that is rocking the robot vacuum market at CES 2026",
+        "link": "https://www.zdnet.com/article/roborock-rover-robot-vacuum-ces-2026/",
+        "published": "Tue, 06 Jan 2026 17:01:09 GMT",
+        "source": "Latest news",
+        "summary": "The Roborock Rover has garnered the attention that few devices can achieve at CES 2026, and I had the chance to see it in person."
+    },
+    {
+        "id": "https://www.zdnet.com/article/withings-app-continuous-glucose-monitoring-abbott-ces-2026/",
+        "title": "You can track your glucose levels in the Withings app now - here's how",
+        "link": "https://www.zdnet.com/article/withings-app-continuous-glucose-monitoring-abbott-ces-2026/",
+        "published": "Tue, 06 Jan 2026 17:00:48 GMT",
+        "source": "Latest news",
+        "summary": "At CES 2026, Withings partnered with Abbott to offer continuous glucose monitoring."
+    },
+    {
+        "id": "https://www.zdnet.com/article/windows-file-managers/",
+        "title": "These 3 Windows file managers made me ditch File Explorer - and they're free",
+        "link": "https://www.zdnet.com/article/windows-file-managers/",
+        "published": "Tue, 06 Jan 2026 17:00:40 GMT",
+        "source": "Latest news",
+        "summary": "If you're not happy with the default Windows file manager, you're in luck because there are plenty of options that improve on the original."
+    },
+    {
+        "id": "https://economictimes.indiatimes.com/tech/artificial-intelligence/rajasthan-govt-launches-ai-policy-for-ethical-practical-use/articleshow/126378263.cms",
+        "title": "Rajasthan govt launches AI policy for ethical, practical use",
+        "link": "https://economictimes.indiatimes.com/tech/artificial-intelligence/rajasthan-govt-launches-ai-policy-for-ethical-practical-use/articleshow/126378263.cms",
+        "published": "Tue, 06 Jan 2026 22:00:31 +0530",
+        "source": "Tech-Economic Times",
+        "summary": "Rajasthan government unveiled the iStart Learning Management System, Rajasthan AVGC-XR Portal, and the Rajasthan AI Portal, aimed at boosting AI-driven education, startups, research, skill development and digital governance in the state."
+    },
+    {
+        "id": "https://economictimes.indiatimes.com/tech/artificial-intelligence/ettech-explainer-whats-nvidias-rubin-platform-and-why-it-matters-for-ai/articleshow/126378029.cms",
+        "title": "ETtech Explainer: What\u2019s Nvidia's Rubin platform, and why it matters for AI",
+        "link": "https://economictimes.indiatimes.com/tech/artificial-intelligence/ettech-explainer-whats-nvidias-rubin-platform-and-why-it-matters-for-ai/articleshow/126378029.cms",
+        "published": "Tue, 06 Jan 2026 21:49:08 +0530",
+        "source": "Tech-Economic Times",
+        "summary": "The Rubin platform moves Nvidia from a seller of powerful GPUs to delivering fully integrated AI computing systems. Rubin is made up of six chips, consisting of tightly connected processors and networking components \u2014 Vera CPU, Rubin GPU, NVLink 6 Switch, ConnectX-9 Super NIC, BlueField-4 DPU, and Spectrum-6 Ethernet Switch."
     }
 ]
