📚 Auto-update: News data refreshed - 2026-01-06 18:16 UTC

--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -42774,5 +42774,141 @@
         "published": "Tue, 06 Jan 2026 21:49:08 +0530",
         "source": "Tech-Economic Times",
         "summary": "The Rubin platform moves Nvidia from a seller of powerful GPUs to delivering fully integrated AI computing systems. Rubin is made up of six chips, consisting of tightly connected processors and networking components \u2014 Vera CPU, Rubin GPU, NVLink 6 Switch, ConnectX-9 Super NIC, BlueField-4 DPU, and Spectrum-6 Ethernet Switch."
+    },
+    {
+        "id": "https://techcrunch.com/2026/01/06/threads-is-developing-in-message-games/",
+        "title": "Threads is developing in-message games",
+        "link": "https://techcrunch.com/2026/01/06/threads-is-developing-in-message-games/",
+        "published": "Tue, 06 Jan 2026 17:39:13 +0000",
+        "source": "TechCrunch",
+        "summary": "Launching in-message games would give Threads an edge over competitors like X and Bluesky, which don\u2019t offer built-in games."
+    },
+    {
+        "id": "https://www.theverge.com/tech/856225/power-banks-are-the-latest-victims-of-feature-creep",
+        "title": "Power bank feature creep is out of control",
+        "link": "https://www.theverge.com/tech/856225/power-banks-are-the-latest-victims-of-feature-creep",
+        "published": "2026-01-06T13:00:00-05:00",
+        "source": "The Verge",
+        "summary": "There was a time not too long ago when buying a power bank was as easy as choosing the cheapest portable battery that could charge your phone and quickly slip into your pocket, purse, or backpack. The hardest part was deciding whether it was time to ditch USB-A ports. Recently, however, brands have been slathering [&#8230;]"
+    },
+    {
+        "id": "https://www.theverge.com/news/852034/asus-zenbook-a16-thin-light-ces-2026",
+        "title": "This 16-inch laptop is so light I can easily lift it with three fingers",
+        "link": "https://www.theverge.com/news/852034/asus-zenbook-a16-thin-light-ces-2026",
+        "published": "2026-01-06T12:30:00-05:00",
+        "source": "The Verge",
+        "summary": "Asus' Zenbook A14 that debuted at last year's CES is now getting a bigger sibling for CES 2026. The new Asus Zenbook A16 is a 16-inch counterpart to refreshed Zenbook A14, both packing Qualcomm Snapdragon X2 Elite processors. The two Zenbook A models are very similar, both sporting OLED displays, two USB 4 ports, one [&#8230;]"
+    },
+    {
+        "id": "https://www.theverge.com/news/852067/asus-zenbook-duo-dual-screen-laptop-intel-new-chip",
+        "title": "Asus\u2019 Zenbook Duo dual-screen laptop gets Intel\u2019s new chip and a more seamless hinge",
+        "link": "https://www.theverge.com/news/852067/asus-zenbook-duo-dual-screen-laptop-intel-new-chip",
+        "published": "2026-01-06T12:30:00-05:00",
+        "source": "The Verge",
+        "summary": "The Asus Zenbook Duo is getting a chip upgrade, an overhauled hinge design, and a big battery upgrade for CES 2026. The new dual-screen laptop will get Intel Panther Lake when it launches later in Q1 2026, though its pricing isn't finalized. But the most noticeable change is to its finish and its hinge. The [&#8230;]"
+    },
+    {
+        "id": "https://www.theverge.com/news/852109/asus-gopro-inspired-proart-px13-laptop",
+        "title": "Asus made a GoPro-inspired ProArt PX13 laptop",
+        "link": "https://www.theverge.com/news/852109/asus-gopro-inspired-proart-px13-laptop",
+        "published": "2026-01-06T12:30:00-05:00",
+        "source": "The Verge",
+        "summary": "Asus is announcing a new ProArt PX13 convertible laptop and ProArt PZ14 detachable tablet for CES 2026. The PX13 comes in two versions: a standard model and a GoPro Edition. Both feature a stylus-compatible 13.3-inch 2880 x 1800 OLED display, dial pad control built into the trackpad, and AMD's \"Strix Halo\" Ryzen AI Max APU [&#8230;]"
+    },
+    {
+        "id": "https://arstechnica.com/science/2026/01/appeals-court-upholds-block-on-one-of-trumps-cuts-to-research-funds/",
+        "title": "Appeals court upholds block on one of Trump\u2019s cuts to research funds",
+        "link": "https://arstechnica.com/science/2026/01/appeals-court-upholds-block-on-one-of-trumps-cuts-to-research-funds/",
+        "published": "Tue, 06 Jan 2026 18:05:05 +0000",
+        "source": "Ars Technica - All content",
+        "summary": "The Trump admin can't arbitrarily set university reimbursements to a low flat rate."
+    },
+    {
+        "id": "https://arstechnica.com/gaming/2026/01/nvidias-new-g-sync-pulsar-monitors-target-motion-blur-at-the-human-retina-level/",
+        "title": "Nvidia\u2019s new G-Sync Pulsar monitors target motion blur at the human retina level",
+        "link": "https://arstechnica.com/gaming/2026/01/nvidias-new-g-sync-pulsar-monitors-target-motion-blur-at-the-human-retina-level/",
+        "published": "Tue, 06 Jan 2026 17:32:14 +0000",
+        "source": "Ars Technica - All content",
+        "summary": "Four new monitors promise \"effective motion clarity of a theoretical 1,000 Hz monitor.\""
+    },
+    {
+        "id": "https://www.engadget.com/audio/speakers/lg-has-released-pricing-for-its-new-sound-suite-speaker-lineup-181053832.html?src=rss",
+        "title": "LG has released pricing for its new Sound Suite speaker lineup",
+        "link": "https://www.engadget.com/audio/speakers/lg-has-released-pricing-for-its-new-sound-suite-speaker-lineup-181053832.html?src=rss",
+        "published": "Tue, 06 Jan 2026 18:10:53 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p>On Monday, we went hands-on at CES with <a href=\"https://www.engadget.com/home/home-theater/lg-sound-suite-hands-on-at-ces-2026-home-theater-powered-by-dolby-atmos-flexconnect-192709499.html\"><ins>LG's new Sound Suite</ins></a> speakers featuring <a href=\"https://www.engadget.com/dolby-atmos-will-use-your-tv-to-expand-living-room-speaker-setups-123021095.html\"><ins>Dolby Atmos FlexConnect</ins></a> and now we have pricing for the entire lineup. The modular home audio system consists of four s"
+    },
+    {
+        "id": "https://www.engadget.com/transportation/evs/navees-ces-lineup-includes-a-speedy-e-scooter-a-golf-cart-and-a-seaplane-180000473.html?src=rss",
+        "title": "Navee's CES lineup includes a speedy e-scooter, a golf cart and... a seaplane?",
+        "link": "https://www.engadget.com/transportation/evs/navees-ces-lineup-includes-a-speedy-e-scooter-a-golf-cart-and-a-seaplane-180000473.html?src=rss",
+        "published": "Tue, 06 Jan 2026 18:00:00 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p>The Chinese micromobility company Navee has some wild new stuff at CES 2026. The lineup is headlined by the UT5 Ultra X, a dual-motor e-scooter with an advertised top speed of 43 mph. And who among us isn't in the market for an auto-following golf cart and a seaplane?</p><p>The flagship UT5 Ultra X is a sleek-looking e-scooter with a pair of 2,400W motors. Navee says it can reach a top speed of 43 mph and has a max range of 87 miles. (However, in the world of e-scooters, it's safe to expect t"
+    },
+    {
+        "id": "https://www.engadget.com/general/the-morning-after-engadget-newsletter-ces-2026-press-day-174444560.html?src=rss",
+        "title": "The Morning After: Sony Honda\u2019s new car, Lego\u2019s first CES press event and more",
+        "link": "https://www.engadget.com/general/the-morning-after-engadget-newsletter-ces-2026-press-day-174444560.html?src=rss",
+        "published": "Tue, 06 Jan 2026 17:44:45 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p>Welcome to your first CES edition of TMA, attempting (almost futilely) to distill the biggest product reveals and announcements. Despite two days of briefings and conferences, today is merely day one. However, we\u2019ve already seen Sony Honda reveal <a href=\"https://www.engadget.com/transportation/evs/sony-honda-mobilitys-afeela-prototype-2026-puts-an-suv-spin-on-its-too-familiar-sedan-at-ces-043927882.html\">its next car</a> \u2014 and the Afeela 1 isn\u2019t yet on sale. We\u2019ve got a deep dive on what we\u2019"
+    },
+    {
+        "id": "https://www.engadget.com/computing/the-asus-zenbook-duo-got-a-fantastic-redesign-for-ces-2026-173000392.html?src=rss",
+        "title": "The ASUS Zenbook Duo got a fantastic redesign for CES 2026",
+        "link": "https://www.engadget.com/computing/the-asus-zenbook-duo-got-a-fantastic-redesign-for-ces-2026-173000392.html?src=rss",
+        "published": "Tue, 06 Jan 2026 17:30:00 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p></p><p>The <a class=\"link\" href=\"https://www.engadget.com/asus-zenbook-duo-review-specs-price-the-first-dual-screen-laptop-worth-buying-130016756.html\" target=\"_blank\">ASUS Zenbook Duo</a> was easily one of my favorite laptops of 2024 as it was the first dual-screen notebook actually worth buying. But now at CES 2026, ASUS has given the second-gen model a complete revamp with practically all the upgrades and tweaks I\u2019ve been hoping for.&nbsp;</p><p>Like the rest of the Zenbook line, the 2026 "
+    },
+    {
+        "id": "https://burkeholland.github.io/posts/opus-4-5-change-everything/",
+        "title": "Opus 4.5 is not the normal AI agent experience that I have had thus far",
+        "link": "https://burkeholland.github.io/posts/opus-4-5-change-everything/",
+        "published": "Tue, 06 Jan 2026 17:45:37 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46515696\">Comments</a>"
+    },
+    {
+        "id": "https://news.ycombinator.com/item?id=46515777",
+        "title": "Launch HN: Tamarind Bio (YC W24) \u2013 AI Inference Provider for Drug Discovery",
+        "link": "https://news.ycombinator.com/item?id=46515777",
+        "published": "Tue, 06 Jan 2026 17:49:56 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46515777\">Comments</a>"
+    },
+    {
+        "id": "https://www.zdnet.com/article/asus-2026-laptop-lineup-is-powerful-thin-and-light-and-has-a-gopro-edition/",
+        "title": "Asus has a new 2026 laptop lineup, including a GoPro Edition for mobile creators",
+        "link": "https://www.zdnet.com/article/asus-2026-laptop-lineup-is-powerful-thin-and-light-and-has-a-gopro-edition/",
+        "published": "Tue, 06 Jan 2026 17:31:14 GMT",
+        "source": "Latest news",
+        "summary": "There's a bigger ZenBook A16 thin and light laptop, a ProArt GoPro Edition machine, and more."
+    },
+    {
+        "id": "https://www.zdnet.com/article/asus-proart-pz14-2-1-laptop-bundled-keyboard-surface-pro-ces/",
+        "title": "Watch out Microsoft: Asus' new 2-in-1 takes on the Surface Pro with a bundled keyboard",
+        "link": "https://www.zdnet.com/article/asus-proart-pz14-2-1-laptop-bundled-keyboard-surface-pro-ces/",
+        "published": "Tue, 06 Jan 2026 17:31:13 GMT",
+        "source": "Latest news",
+        "summary": "Microsoft's Surface Pro finds a worthy contender in the Asus ProArt PZ14, just announced at CES 2026."
+    },
+    {
+        "id": "https://economictimes.indiatimes.com/tech/artificial-intelligence/german-minister-says-eu-must-take-legal-steps-to-stop-groks-sexualised-ai-photos/articleshow/126379520.cms",
+        "title": "German minister says EU must take legal steps to stop Grok's sexualised AI photos",
+        "link": "https://economictimes.indiatimes.com/tech/artificial-intelligence/german-minister-says-eu-must-take-legal-steps-to-stop-groks-sexualised-ai-photos/articleshow/126379520.cms",
+        "published": "Tue, 06 Jan 2026 23:08:32 +0530",
+        "source": "Tech-Economic Times",
+        "summary": "The EU Commission must take legal \u200daction to stop the \"industrialization \u200bof sexual harassment\" taking place on \u2060Elon Musk's social media platform X, Germany's media minister Wolfram Weimer said."
+    },
+    {
+        "id": "https://economictimes.indiatimes.com/tech/artificial-intelligence/musks-ai-chatbot-faces-global-backlash-over-sexualized-images-of-women-and-children/articleshow/126379359.cms",
+        "title": "Musk's AI chatbot faces global backlash over sexualised images of women and children",
+        "link": "https://economictimes.indiatimes.com/tech/artificial-intelligence/musks-ai-chatbot-faces-global-backlash-over-sexualized-images-of-women-and-children/articleshow/126379359.cms",
+        "published": "Tue, 06 Jan 2026 23:02:18 +0530",
+        "source": "Tech-Economic Times",
+        "summary": "Elon Musk's AI chatbot Grok is facing a backlash from governments around the world after a recent surge in sexualized images of women and children generated without consent by the artificial intelligence-powered tool. On Tuesday, Britain's top technology official demanded that Musk's social media platform X take urgent action while a Polish lawmaker cited it as a reason to enact digital safety laws."
     }
 ]
