📚 Auto-update: News data refreshed - 2026-01-06 19:09 UTC

--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -42910,5 +42910,85 @@
         "published": "Tue, 06 Jan 2026 23:02:18 +0530",
         "source": "Tech-Economic Times",
         "summary": "Elon Musk's AI chatbot Grok is facing a backlash from governments around the world after a recent surge in sexualized images of women and children generated without consent by the artificial intelligence-powered tool. On Tuesday, Britain's top technology official demanded that Musk's social media platform X take urgent action while a Polish lawmaker cited it as a reason to enact digital safety laws."
+    },
+    {
+        "id": "https://techcrunch.com/2026/01/06/how-world-cup-champion-mario-gotze-built-a-parallel-career-as-an-angel-investor/",
+        "title": "How World Cup champion Mario G\u00f6tze built a parallel career as an angel investor",
+        "link": "https://techcrunch.com/2026/01/06/how-world-cup-champion-mario-gotze-built-a-parallel-career-as-an-angel-investor/",
+        "published": "Tue, 06 Jan 2026 18:18:02 +0000",
+        "source": "TechCrunch",
+        "summary": "Companion M, G\u00f6tze\u2019s personal investment vehicle, now has a portfolio of more than 70 companies, two of which became unicorns in 2025"
+    },
+    {
+        "id": "https://www.theverge.com/news/856207/ces-2026-trend-ai-companion-robot-pet",
+        "title": "AI moves into the real world as companion robots and pets",
+        "link": "https://www.theverge.com/news/856207/ces-2026-trend-ai-companion-robot-pet",
+        "published": "2026-01-06T14:00:00-05:00",
+        "source": "The Verge",
+        "summary": "Artificial intelligence doesn't always want to optimize your life or steal your job. Sometimes, AI just wants to be your friend. And while robot pets weren't the biggest stars of CES 2026, they've become more than just noise and are signaling how AI is apparently leaving our screens and taking on a physical presence in [&#8230;]"
+    },
+    {
+        "id": "https://www.theverge.com/tech/854835/mammotion-spino-s1-pro-robot-pool-cleaner-ces-2026",
+        "title": "This robot pool cleaner lifts itself out of the water to charge",
+        "link": "https://www.theverge.com/tech/854835/mammotion-spino-s1-pro-robot-pool-cleaner-ces-2026",
+        "published": "2026-01-06T13:30:00-05:00",
+        "source": "The Verge",
+        "summary": "Mammotion, the company best known for its line of robot lawnmowers, is launching a robot pool cleaner that can take itself out of the water. As shown during CES 2026, the Spino S1 Pro comes with a robotic arm mounted to a docking station that sits at the edge of your pool. When the bot [&#8230;]"
+    },
+    {
+        "id": "https://arstechnica.com/ai/2026/01/news-orgs-want-openai-to-dig-up-millions-of-deleted-chatgpt-logs/",
+        "title": "News orgs want OpenAI to dig up millions of deleted ChatGPT logs",
+        "link": "https://arstechnica.com/ai/2026/01/news-orgs-want-openai-to-dig-up-millions-of-deleted-chatgpt-logs/",
+        "published": "Tue, 06 Jan 2026 18:59:21 +0000",
+        "source": "Ars Technica - All content",
+        "summary": "OpenAI's loss in privacy fight could lead to sharing even more deleted chats."
+    },
+    {
+        "id": "https://www.engadget.com/gaming/riot-games-2xko-will-hit-consoles-on-january-20-185627826.html?src=rss",
+        "title": "Riot Games' 2XKO will hit consoles on January 20",
+        "link": "https://www.engadget.com/gaming/riot-games-2xko-will-hit-consoles-on-january-20-185627826.html?src=rss",
+        "published": "Tue, 06 Jan 2026 18:56:27 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p>Riot Games has a pretty long legacy as a PC gaming studio, but the company is spreading out into consoles with its newest title. <em>2XKO</em> will land on consoles on <a class=\"link\" href=\"https://2xko.riotgames.com/en-us/news/announcements/2xko-is-coming-to-console-january-20/\" target=\"_blank\">January 20</a>, to coincide with the start of its first season. The game will be available globally for the PlayStation 5 and Xbox Series X/S with cross-play support, allowing current players to acces"
+    },
+    {
+        "id": "https://www.engadget.com/gaming/pc/the-pc-version-of-007-first-light-requires-lots-of-expensive-ram-and-vram-to-run-at-recommended-settings-184339040.html?src=rss",
+        "title": "The PC version of 007 First Light requires lots of expensive RAM and VRAM to run at recommended settings",
+        "link": "https://www.engadget.com/gaming/pc/the-pc-version-of-007-first-light-requires-lots-of-expensive-ram-and-vram-to-run-at-recommended-settings-184339040.html?src=rss",
+        "published": "Tue, 06 Jan 2026 18:43:39 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p>IO Interactive just revealed minimum and recommended specs for the PC build of <em>007 First Light</em>. The company recommends 32GB of RAM and 12GB of VRAM. In a normal world, this wouldn't be news, as modern NVIDIA GPUs certainly have more than enough VRAM. However, we live in a world where <a href=\"https://www.engadget.com/computing/idc-warns-of-major-pc-market-downturn-due-to-memory-crunch-214510197.html\"><ins>AI companies gobble up lots of memory</ins></a><ins>.</ins></p>\n<p>This has cau"
+    },
+    {
+        "id": "https://www.engadget.com/gaming/pc/pny-is-releasing-slim-sized-nvidia-rtx-gpus-just-as-pc-building-becomes-prohibitively-expensive-183127305.html?src=rss",
+        "title": "PNY is releasing slim-sized NVIDIA RTX GPUs just as PC building becomes prohibitively expensive",
+        "link": "https://www.engadget.com/gaming/pc/pny-is-releasing-slim-sized-nvidia-rtx-gpus-just-as-pc-building-becomes-prohibitively-expensive-183127305.html?src=rss",
+        "published": "Tue, 06 Jan 2026 18:31:27 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p>If I were building a new PC today, I'd go for a small form factor mATX or ITX build. With companies like <a class=\"link\" href=\"https://www.fractal-design.com/\" target=\"_blank\">Fractal Design</a> and <a class=\"link\" href=\"https://lian-li.com/\" target=\"_blank\">Lian Li</a> making cases that can fit modern GPUs without sacrificing on thermals, you don't need to settle for the old mid-tower monstrosities of yesteryear. And that's why PNY's <a class=\"link\" href=\"https://www.pny.com/company/press-ce"
+    },
+    {
+        "id": "https://www.engadget.com/gaming/xbox/resident-evil-village-and-star-wars-outlaws-join-januarys-game-pass-additions-182500938.html?src=rss",
+        "title": "Resident Evil Village and Star Wars Outlaws join January's Game Pass additions",
+        "link": "https://www.engadget.com/gaming/xbox/resident-evil-village-and-star-wars-outlaws-join-januarys-game-pass-additions-182500938.html?src=rss",
+        "published": "Tue, 06 Jan 2026 18:25:00 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p>On Tuesday, Microsoft announced the first batch of incoming Game Pass titles for 2026. <em>Star Wars Outlaws</em> and <em>Resident Evil Village</em> headline the first wave of the January lineup.</p><p>If you (perhaps wisely) held off on spending $70 on Ubisoft's first stab at a Star Wars game, here's your chance to try it for less. <em>Star Wars Outlaws</em> sets you loose in an open world as the young thief Kay Vess. The third-person action title includes melee, shooting and stealth. There\u2019"
+    },
+    {
+        "id": "https://geospy.ai/blog/locating-a-photo-of-a-vehicle-in-30-seconds-with-geospy",
+        "title": "Locating a Photo of a Vehicle in 30 Seconds with GeoSpy",
+        "link": "https://geospy.ai/blog/locating-a-photo-of-a-vehicle-in-30-seconds-with-geospy",
+        "published": "Tue, 06 Jan 2026 18:00:27 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46515948\">Comments</a>"
+    },
+    {
+        "id": "https://www.zdnet.com/article/ecoflow-delta-3-max-plus-review/",
+        "title": "This portable power station kept my essentials running during a snowstorm outage",
+        "link": "https://www.zdnet.com/article/ecoflow-delta-3-max-plus-review/",
+        "published": "Tue, 06 Jan 2026 18:28:34 GMT",
+        "source": "Latest news",
+        "summary": "I tested the EcoFlow Delta 3 Max Plus during a recent power outage, and it didn't flinch, even in cold weather."
     }
 ]
